# school-back

./: .gitignore  README.md  pyproject.toml  tapi import Depends
db_docs/: school_db_script.sql  school_db_seed.txt
src/app/: main.py
src/app/config/: database_provider.py
src/app/dependencies/: database_provider.py  grade_provider.py  permission_provider.py  role_provider.py  student_provider.py  teacher_provider.py  user_provider.py
src/app/fastapi_dependencies/: admin_provider.py  group_provider.py  phone_number_provider.py  student_provider.py  subject_provider.py  teacher_provider.py
src/application/gateway/repository/: generic_crud.py
src/application/usecase/: role_crud_usecase.py
src/application/usecase/admin/: find_all_admins.py
src/application/usecase/grade/: find_all_grades.py
src/application/usecase/group/: find_all_groups.py  find_group_by_id.py  group_usecase.py
src/application/usecase/permission/: find_all_permissions.py
src/core/: main.py
src/domain/entities/: grade.py  group.py  permission.py  role.py  student_subject.py  subject.py
src/domain/gateway/: admin_repository_gateway.py  generic_crud_gateway.py  grade_repository_gateway.py  group_repository_gateway.py  permission_repository_gateway.py  phone_number_repository_gateway.py  role_gateway.py  role_repository_gateway.py  student_repository_gateway.py  student_subject_repository_gateway.py  subject_repository_gateway.py  teacher_repository_gateway.py  user_repository_gateway.py
src/domain/usecase/: role_crud_usecase.py
src/school_back/: main.py
(+217 files in other folders)
