[tool.poetry]
name = "school-back"
version = "0.1.0"
description = "School backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
    { include = "infraestructure", from = "src" },
    { include = "domain", from = "src" },
    { include = "application", from = "src" },
    { include = "entry_points", from = "src" },
    { include = "application", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.115.0"
sqlmodel = "^0.0.27"
pymysql = "^1.1.2"
cryptography = "^46.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


